# ChangeLog for sys-apps/portage
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1165 2013/01/14 19:55:35 zmedico Exp $

*portage-2.2.0_alpha152 (14 Jan 2013)

  14 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha152.ebuild,
  -portage-2.2.0_alpha149.ebuild:
  2.2.0_alpha152 version bump. This includes all of the fixes in 2.1.11.41. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.41 (14 Jan 2013)

  14 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.41.ebuild,
  -portage-2.1.11.38.ebuild:
  2.1.11.41 version bump. This fixes bug #430488 (python3 support for selinux)
  and bug #451386 (handle non-shell-script in /etc/init.d). Bug #445274 tracks
  all bugs fixed since portage-2.1.11.31.

  14 Jan 2013; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Add linguas_ru for bug #450372.

*portage-2.2.0_alpha151 (11 Jan 2013)

  11 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha151.ebuild,
  -portage-2.2.0_alpha150.ebuild:
  2.2.0_alpha150 version bump. This includes all of the fixes in 2.1.11.40. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.40 (11 Jan 2013)

  11 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.40.ebuild,
  -portage-2.1.11.39.ebuild:
  2.1.11.40 version bump. This fixes bug #451344 (spawn_nofetch portage
  NameError, a regression in 2.1.11.39 and 2.2.0_alpha150). Bug #445274 tracks
  all bugs fixed since portage-2.1.11.31.

*portage-2.2.0_alpha150 (10 Jan 2013)

  10 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha150.ebuild:
  2.2.0_alpha150 version bump. This includes all of the fixes in 2.1.11.39. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.39 (10 Jan 2013)

  10 Jan 2013; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.39.ebuild:
  2.1.11.39 version bump. This fixes bug #243192 (update quickpkg man page), bug